--- a/templates/update_event.html
+++ b/templates/update_event.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../static/css/main.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <title>Atualizar Evento</title>
 </head>
 
 <body>
-    <h1 style="text-align:center;">Atualizar Evento</h1>
+    <header>
+            <nav>
+                <div>
+                    <form method="POST" action="/start" style="text-align: initial">
+                        <button type="submit" class="back-btn header-right" style="background-color: white">
+                            <i class="fas fa-arrow-left icon-size"></i>
+                        </button>
+                    </form>
+                </div>
+            </nav>
+            <nav>
+                <h1 style="color: black">Agenda </h1>
+            </nav>
+            <nav>
+                <div>
+                    <form method="POST" action="/settings" style="text-align: end">
+                        <button type="submit" class="account-btn header-right" style="background-color: white">
+                            <i class="fas fa-user-circle icon-size"></i>
+                        </button>
+                    </form>
+                </div>
+            </nav>
+        </header>
+    <form>
+        <button type="submit" style="background-color: black"><a style="color: white">Evento</a></button>
+    </form>
+    <br>
     <form method="POST" action="{{ url_for('update_event', event_id=event_id) }}">
       {{ form.hidden_tag() }}
       <label for="title">Título</label>
       <input type="text" name="title" id="title" value="{{ form.title.data }}" required/>
-      <br>
+      <br><br>
       <label for="date_time">Data / Hora</label>
       <input type="datetime-local" name="date_time" id="date_time" value="{{ form.date_time.data }}" required/>
-      <br>
+      <br><br>
       <label for="description">Descrição</label>
       <input type="text" name="description" id="description" value="{{ form.description.data }}" required/>
       <br><br>
